--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "web3-eth-abi": "1.3.0",
     "web3-eth-contract": "1.2.6",
     "web3-utils": "1.2.6",
-    "secp256k1": "^4.0.2"
+    "secp256k1": "^4.0.2",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
